[metadata]
name = pnpsc-gym
version = 0.0.1
author = Michael Bearss
author_email = mbearss@gmail.com
description = A gym environment to allow RL agents to interact with a PNPSC simulator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mbearss/pnpsc_gym
project_urls =
    Bug Tracker = https://github.com/mbearss/pnpsc_gym/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    gym
    tensorboard
    stable_baselines3
    matplotlib
    numpy
    networkx
    requests
    shimmy>=0.2.1

[options.packages.find]
where = src